syntax = "proto3";

option csharp_namespace = "LibplanetConsole.Node.Grpc";

package libplanet.console.node.v1;

service BlockChainGrpcService {
  rpc SendTransaction(SendTransactionRequest) returns (SendTransactionResponse);
  rpc GetNextNonce(GetNextNonceRequest) returns (GetNextNonceResponse);
  rpc GetTipHash(GetTipHashRequest) returns (GetTipHashResponse);
  rpc GetState(GetStateRequest) returns (GetStateResponse);
  rpc GetBlockHash(GetBlockHashRequest) returns (GetBlockHashResponse);
  rpc GetAction(GetActionRequest) returns (GetActionResponse);
}

message SendTransactionRequest {
    bytes transactionData = 1;
  }

  message SendTransactionResponse {
    string txId = 1;
  }

  message GetNextNonceRequest {
    string address = 1;
  }

  message GetNextNonceResponse {
    int64 nonce = 1;
  }

  message GetTipHashRequest {
  }

  message GetTipHashResponse {
    string blockHash = 1;
  }

  message GetStateRequest {
    optional string blockHash = 1;
    string accountAddress = 2;
    string address = 3;
  }

  message GetStateResponse {
    bytes stateData = 1;
  }

  message GetBlockHashRequest {
    int64 height = 1;
  }

  message GetBlockHashResponse {
    string blockHash = 1;
  }

  message GetActionRequest {
    string txId = 1;
    int32 actionIndex = 2;
  }

  message GetActionResponse {
    bytes actionData = 1;
  }
